[package]
name = "blockchain_simulation_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2     = "0.10.8"
chrono   = { version = "0.4.31", features = ["serde"] }
serde    = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
rand     = "0.8.5"
hex      = "0.4.3"
reqwest  = { version = "0.11", features = ["json"] }
tokio    = { version = "1", features = ["full"] }

[dev-dependencies]
assert_approx_eq = "1.1.0"